--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run",
+    "test headless": "cypress run",
     "open cypress": "cypress open"
   },
   "keywords": [],
